# ai-research-trends-rag

./: .env.example  .gitignore  LICENSE  PROGRESS.md  README.md  SESSION_SUMMARY.md  claude.md  docker-compose.yml  pyproject.toml
config/: README.md  arxiv_categories.yaml  example_queries.yaml  research_focus.md  research_topics.yaml  search_filters.yaml
docs/: api-rate-limits.md  architecture.md  deployment-guide.md  local-testing-guide.md  quick-start.md  uv-guide.md
infra/: azure-resources.sh
scripts/: ingest_arxiv_papers.py  ingest_arxiv_papers_v2.py  rate_limiter.py  run_local_demo.sh  setup_local.sh  test_services.py  validate_config.py
services/api-gateway/: requirements.txt
services/frontend/: Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  utils.py
services/ingestion-function/: requirements.txt
services/processing-service/: main.py  pyproject.toml  requirements.txt
services/processing-service/app/: __init__.py  config.py  embeddings.py  schemas.py  storage.py
services/rag-query-service/: main.py  pyproject.toml  requirements.txt
services/rag-query-service/app/: __init__.py  config.py  generation.py  prompts.py  retrieval.py  schemas.py
