[project]
name = "frontend"
version = "1.0.0"
description = "AI Research Trends RAG - Streamlit Frontend"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.30.0",
    "plotly==5.18.0",
    "pandas==2.1.4",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "bibtexparser==1.4.1",
    "pyyaml==6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
