[project]
name = "processing-service"
version = "1.0.0"
description = "AI Research Trends RAG - Processing Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "azure-servicebus==7.11.4",
    "azure-cosmos==4.5.1",
    "azure-storage-blob==12.19.0",
    "azure-identity==1.15.0",
    "openai==1.10.0",
    "qdrant-client==1.7.3",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "python-json-logger==2.0.7",
    "opik==0.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "tenacity==8.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "httpx==0.26.0",
]
